update AC button

--- a/index.html
+++ b/index.html
@@ -48,12 +48,8 @@
             </button>
           </div>
           <div class="col-3">
-            <button
-              class="btn p-3 negative-button btn-primary w-100"
-              title="In Progress..."
-              disabled
-            >
-              +/-
+            <button class="btn p-3 negative-button btn-primary w-100 ac-btn">
+              AC
             </button>
           </div>
           <div class="col-3">
